--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <input type="color" name="color1" class="color1" value="#cba2a2">
         <input type="color" name="color2" class="color2" value="#7cf4f4">
       </div>
-      <h3>linear-gradient(to right, #ff0088, #00fbff);</h3>
+      <h3 class="color-text-code">linear-gradient(to right, #ff0088, #00fbff);</h3>
+      <span class="clip" onclick="clip()">Copy</span> <br />
       <button id="random" onclick="generateRandomColor()">Random</button>
     </div>
     <script src="bg_generator.js"></script>
